#2 fix bug: edit face canvas too big when image very tall

--- a/main.css
+++ b/main.css
@@ -203,6 +203,7 @@ canvas {
     width: 200px;
     background-color: #2f2f2f;
     border: 2px solid #aaaaaa;
+    max-height: 500px;
 }
 
 .lineButton {
